--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-docker:up": "nodemon --watch . --exec \"docker-compose exec app sh -c 'node server.js'\"",
-    "dev-docker:down": "docker-compose down",
-    "dev-docker:restart": "docker-compose down && nodemon --watch . --exec \"docker-compose exec app sh -c 'node server.js'\""
+    "dev-docker:up": "docker-compose -f docker-compose.dev.yml --env-file ./docker/.env.docker up -d --build",
+    "dev-docker:down": "docker-compose -f docker-compose.dev.yml --env-file ./docker/.env.docker down",
+    "dev-docker:logs": "docker logs -f aurora-jewelry-dev",
+    "dev-docker:install": "docker exec -it aurora-jewelry-dev npm install"
   },
   "repository": {
     "type": "git",
