--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,18 @@ jobs:
           username: ubuntu
           key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
           script: |
+            echo "Pulling latest image..."
             sudo docker pull $CONTAINER_IMAGE:latest
-            sudo docker stop test-app || true
-            sudo docker rm test-app || true
-            sudo docker run -d --name test-app -p 80:80 $CONTAINER_IMAGE:latest
+            echo "Stopping existing container..."
+            sudo docker stop test-app 2>/dev/null || echo "No container to stop"
+            echo "Removing existing container..."
+            sudo docker rm test-app 2>/dev/null || echo "No container to remove"
+            echo "Starting new container..."
+            sudo docker run -d --name test-app \
+              -p 80:3000 \
+              -e NODE_ENV=production \
+              -e PORT=3000 \
+              --restart unless-stopped \
+              $CONTAINER_IMAGE:latest
+            echo "Verifying container is running..."
+            sudo docker ps | grep test-app
