Enhance hero section with animated jewelry image and glowing effect

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,3 @@
-APP_NAME=aurora-jewelry
-APP_PORT=3000
-NODE_ENV=development
-
-# AWS Configuration
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_access_key_here
-AWS_SECRET_ACCESS_KEY=your_secret_key_here
-
-# EC2 Instance Tags for Deployment
-EC2_ENVIRONMENT_TAG=dev
-# Use 'dev' for development instances, 'production' for production instances
-
-# Docker Configuration
-DOCKER_IMAGE_NAME=aurora-jewelry
-DOCKER_REGISTRY_URL=your_registry_url_here
-
-# Application Configuration
-API_BASE_URL=http://localhost:3000
-CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
-
-# Database (if you add one later)
-# DATABASE_URL=your_database_connection_string
-# REDIS_URL=your_redis_connection_string
-
-# Monitoring & Logging
-# LOG_LEVEL=info
-# SENTRY_DSN=your_sentry_dsn_here
-
-# Do NOT put secrets here that shouldn't be shared.
-# For production, use AWS Secrets Manager or Parameter Store.
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
