--- a/env.sample
+++ b/env.sample
@@ -1,10 +1,3 @@
-# Example env.sample for AWS deployment
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-EC2_HOST=
-EC2_USER=
-DOCKER_IMAGE=
-REGISTRY=
-IMAGE_NAME=
-# Add any other required environment variables below
+APP_NAME=aurora-jewelry
+APP_PORT=3000
+NODE_ENV=development
