--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -27,21 +27,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Check required environment variables
-        run: |
-          missing=0
-          while IFS= read -r line; do
-            key=$(echo "$line" | cut -d= -f1)
-            if [ -n "$key" ] && [ -z "${!key}" ]; then
-              echo "❌ Missing required environment variable: $key"
-              missing=1
-            fi
-          done < env.sample
-          if [ $missing -eq 1 ]; then
-            echo "ERROR: One or more required environment variables are missing."
-            exit 1
-          fi
-
       - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
@@ -74,4 +59,16 @@ jobs:
             sudo docker pull ${{ steps.meta.outputs.tags }}
             sudo docker stop test-app || true
             sudo docker rm test-app || true
+            missing=0
+            while IFS= read -r line; do
+              key=$(echo "$line" | cut -d= -f1)
+              if [ -n "$key" ] && [ -z "${!key}" ]; then
+                echo "❌ Missing required environment variable: $key"
+                missing=1
+              fi
+            done < .env.sample
+            if [ $missing -eq 1 ]; then
+              echo "ERROR: One or more required environment variables are missing."
+              exit 1
+            fi
             sudo docker run -d --name test-app -p 3000:3000 ${{ steps.meta.outputs.tags }}
