Enhance hero section with animated jewelry image and glowing effect

--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -46,82 +46,27 @@ jobs:
           script: |
             cd ~/test
 
-            echo "🔍 Starting environment validation..."
-            echo "================================"
+            [ ! -f ".env" ] && echo "❌ ERROR: .env file not found" && exit 1
+            [ ! -f ".env.example" ] && echo "❌ ERROR: .env.example not found" && exit 1
 
-            # Check if .env exists
-            if [ ! -f ".env" ]; then
-              echo "❌ ERROR: .env file not found in ~/test/"
-              echo "Please create .env file on EC2 instance"
-              exit 1
-            fi
-
-            echo "✅ .env file found"
-
-            # Check if .env.example exists
-            if [ ! -f ".env.example" ]; then
-              echo "❌ ERROR: .env.example file not found"
-              exit 1
-            fi
-
-            echo "✅ .env.example file found"
-            echo ""
-
-            # Extract keys from .env.example (ignore comments and empty lines)
             REQUIRED_KEYS=$(grep -v '^#' .env.example | grep -v '^$' | grep '=' | cut -d '=' -f1 | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
-
             MISSING_KEYS=()
             EMPTY_KEYS=()
 
-            echo "🔎 Checking required environment variables..."
-            echo ""
-
-            # Check each required key
             while IFS= read -r key; do
-              if [ -z "$key" ]; then
-                continue
-              fi
+              [ -z "$key" ] && continue
               
-              # Check if key exists in .env
               if ! grep -q "^${key}=" .env; then
                 MISSING_KEYS+=("$key")
-                echo "❌ Missing: $key"
               else
-                # Check if key has a value
                 VALUE=$(grep "^${key}=" .env | cut -d '=' -f2- | sed 's/^[[:space:]]*//;s/[[:space:]]*$//' | tr -d '"' | tr -d "'")
-                if [ -z "$VALUE" ]; then
-                  EMPTY_KEYS+=("$key")
-                  echo "⚠️  Empty: $key"
-                else
-                  echo "✅ Valid: $key"
-                fi
+                [ -z "$VALUE" ] && EMPTY_KEYS+=("$key")
               fi
             done <<< "$REQUIRED_KEYS"
 
-            echo ""
-            echo "================================"
-
-            # Report final results
-            if [ ${#MISSING_KEYS[@]} -gt 0 ]; then
-              echo "❌ VALIDATION FAILED! Missing required environment variables."
-              exit 1
-            fi
-
-            if [ ${#EMPTY_KEYS[@]} -gt 0 ]; then
-              echo ""
-              echo "⚠️  WARNING: Some variables are empty"
-              echo ""
-              echo "Empty keys in .env:"
-              for key in "${EMPTY_KEYS[@]}"; do
-                echo "  - $key"
-              done
-              echo ""
-              echo "Continuing deployment, but please verify these values"
-            fi
-
-            echo ""
-            echo "✅ Environment validation passed!"
-            echo "All required variables are present"
+            [ ${#MISSING_KEYS[@]} -gt 0 ] && echo "❌ Missing required variables" && exit 1
+            [ ${#EMPTY_KEYS[@]} -gt 0 ] && echo "⚠️  WARNING: ${#EMPTY_KEYS[@]} empty variables found"
+            echo "✅ Environment validation passed"
 
       - name: Log in to Container Registry
         uses: docker/login-action@v3
@@ -151,47 +96,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
           script: |
-            cd ~/test
-
-            echo "🚀 Starting deployment..."
-
-            # Login to container registry
-            echo "${{ secrets.GITHUB_TOKEN }}" | sudo docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-            # Pull latest image
-            echo "📦 Pulling latest image..."
+            sudo docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
             sudo docker pull ${{ steps.meta.outputs.tags }}
-
-            # Stop and remove old container
-            echo "🛑 Stopping old container..."
             sudo docker stop test-app || true
             sudo docker rm test-app || true
-
-            # Run new container with .env file
-            echo "▶️  Starting new container..."
-            sudo docker run -d \
-              --name test-app \
-              -p 3000:3000 \
-              --env-file .env \
-              --restart unless-stopped \
-              ${{ steps.meta.outputs.tags }}
-
-            # Wait and verify
-            echo "⏳ Waiting for container to start..."
-            sleep 5
-
-            if sudo docker ps | grep -q test-app; then
-              echo "✅ Deployment successful!"
-              echo ""
-              echo "📋 Container status:"
-              sudo docker ps --filter name=test-app --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
-              echo ""
-              echo "📜 Recent logs:"
-              sudo docker logs --tail 20 test-app
-            else
-              echo "❌ Deployment failed - container is not running"
-              echo ""
-              echo "📜 Container logs:"
-              sudo docker logs test-app
-              exit 1
-            fi
