Enhance hero section with animated jewelry image and glowing effect

--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -102,6 +102,8 @@ jobs:
             fi
             sudo docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
             sudo docker pull ${{ steps.meta.outputs.tags }}
+            # Remove old images for this repo except the latest
+            sudo docker images --format '{{.Repository}} {{.Tag}} {{.ID}}' | grep 'ghcr.io/hardikbhanderi-exelanceit/test' | grep -v "${{ steps.meta.outputs.tags }}" | awk '{print $3}' | xargs -r sudo docker rmi || true
             sudo docker stop test-app || true
             sudo docker rm test-app || true
             sudo docker run -d --name test-app -p 3000:3000 ${{ steps.meta.outputs.tags }}
