Fix GitHub Actions conditional syntax
- Remove unsupported && operators from conditional expressions
- Simplify conditionals to use single secret checks
- Fix syntax errors that were causing workflow failures

--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
 
       - name: Copy validation files to EC2
-        if: ${{ secrets.SERVER_HOST && secrets.PRIVATE_SSH_KEY }}
+        if: ${{ secrets.SERVER_HOST }}
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -39,7 +39,7 @@ jobs:
           strip_components: 0
 
       - name: Validate Environment Variables on EC2
-        if: ${{ secrets.SERVER_HOST && secrets.PRIVATE_SSH_KEY }}
+        if: ${{ secrets.SERVER_HOST }}
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -110,7 +110,7 @@ jobs:
           strip_components: 0
 
       - name: Deploy to AWS EC2
-        if: ${{ secrets.SERVER_HOST && secrets.PRIVATE_SSH_KEY }}
+        if: ${{ secrets.SERVER_HOST }}
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -143,7 +143,7 @@ jobs:
           fi
 
       - name: Deploy to private EC2s via SSH from public EC2
-        if: ${{ secrets.PRIVATE_HOSTS && secrets.SERVER_HOST && secrets.PRIVATE_SSH_KEY }}
+        if: ${{ secrets.PRIVATE_HOSTS }}
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
