--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -94,6 +94,8 @@ jobs:
           echo "Writing deploy key to file (temporary)"
           printf '%s' "${{ secrets.PRIVATE_SSH_KEY }}" > hardik-test.pem
           chmod 600 hardik-test.pem
+          ls -la hardik-test.pem
+          echo "File created and permissions set"
 
       - name: Upload deploy key to public EC2
         uses: appleboy/scp-action@v0.1.7
