--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -89,23 +89,18 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Prepare deploy key on runner
-        run: |
-          echo "Writing deploy key to file (temporary)"
-          printf '%s' "${{ secrets.PRIVATE_SSH_KEY }}" > hardik-test.pem
-          chmod 600 hardik-test.pem
-          ls -la hardik-test.pem
-          echo "File created and permissions set"
-
       - name: Upload deploy key to public EC2
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ubuntu
           key: ${{ secrets.PRIVATE_SSH_KEY }}
-          source: "hardik-test.pem"
-          target: "~/.ssh/hardik-test.pem"
-          strip_components: 0
+          script: |
+            echo "Writing deploy key to file on EC2"
+            printf '%s' "${{ secrets.PRIVATE_SSH_KEY }}" > ~/.ssh/hardik-test.pem
+            chmod 600 ~/.ssh/hardik-test.pem
+            ls -la ~/.ssh/hardik-test.pem
+            echo "Deploy key uploaded and permissions set"
 
       - name: Deploy to AWS EC2
         uses: appleboy/ssh-action@v0.1.7
